Comentado del index.html

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
   <div class="categories container-fluid pt-4 pb-4 d-flex flex-column align-items-center">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-sm-4">
+        <!-- MUEBLES -->
         <a href="#">
           <div class="card category__muebles category__muebles--style mt-4">
             <img src="images/categorias_muebles.JPG" alt="Imagen de la categoría Muebles" class="category__image rounded">
@@ -199,6 +200,7 @@
         </a>
       </div>
       <div class="col-12 col-sm-4">
+        <!-- TEXTILES -->
         <a href="#">
           <div class="card category__textiles category__textiles--style mt-4">
             <img src="images/categorias_textiles.JPG" alt="Imagen de la categoría Textiles" class="category__image rounded">
@@ -209,6 +211,7 @@
         </a>
       </div>
       <div class="col-12 col-sm-4">
+        <!-- DECORACIÓN -->
         <a href="#">
           <div class="card category__decoracion category__decoracion--style mt-4">
             <img src="images/categorias_decoracion.JPG" alt="Imagen de la categoría Decoracíon" class="category__image rounded">
@@ -225,11 +228,13 @@
   <!-- FOOTER DESKTOP START -->
   <footer class="footer container-fluid mt-4 d-none d-sm-block">
     <div class="row d-flex">
+      <!-- FOOTER BRAND -->
       <div class="footer__brand col-6 col-sm-2 align-self-center">
         <a href="index.html">
           <img src="images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
         </a>
       </div>
+      <!-- FOOTER INFORMATION -->
       <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start">
         <p>Sarmiento 37</p>
         <p>Puerto de Frutos, Tigre</p>
@@ -237,11 +242,13 @@
         <p>Ventasweb@latiendadelola.com</p>
       </div>
 
+      <!-- FOOTER MAP -->
       <div class="footer__map col-6 col-sm-4 align-self-center">
         <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
       </div>
 
+      <!-- SOCIAL MEDIA BUTTONS -->
       <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
         <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
           <img src="images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
@@ -258,11 +265,13 @@
   <footer class="footer d-block d-sm-none container-fluid mt-4">
     <div class="row">
       <div class="col-6 pt-2">
+        <!-- FOOTER BRAND -->
         <div class="footer__brand col-6 col-sm-2 align-self-center">
           <a href="index.html">
             <img src="images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
           </a>
         </div>
+        <!-- SOCIAL MEDIA BUTTONS -->
         <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
           <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
             <img src="images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
@@ -271,6 +280,7 @@
             <img src="images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
           </a>
         </div>
+        <!-- FOOTER INFORMATION -->
         <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
           <p>Sarmiento 37</p>
           <p>Puerto de Frutos, Tigre</p>
@@ -279,6 +289,7 @@
         </div>
       </div>
       <div class="col-6 pt-2">
+        <!-- FOOTER MAP -->
         <div class="footer__map col-6 col-sm-4 align-self-center">
           <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
