Comentado del sobreNosotros.html

--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -13,12 +13,15 @@
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
+            <!-- LOGO -->
             <a class="navbar-brand" href="../index.html">
                 <img src="../images/laTiendaDeLolaLogo.png" class="navbar-brand__image" alt="Icono de La Tienda de Lola">
             </a>
+            <!-- COLLAPSED NAV BUTTON -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!-- NAV LINKS -->
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -38,6 +41,7 @@
                     </li>
                 </ul>
             </div>
+            <!-- SEARCH BAR -->
             <div class="searchbar d-none d-lg-block me-3">
                 <input class="search_input" type="text" name="" placeholder="Buscar">
                 <a href="#" class="search_icon">
@@ -52,15 +56,18 @@
         <div class="container aboutUs">
             <div class="row d-flex justify-content-center mt-5 mb-5">
                 <div class="col-12">
+                    <!-- TITLE -->
                     <h2 class="aboutUs__title text-center mt-4">SOBRE NOSOTROS</h2>
                 </div>
                 <div class="col-6 aboutUs__Text mt-4">
+                    <!-- BODY -->
                     <p>La tienda de Lola es creada por Guadalupe en un 14 de diciembre del 2014 como una forma de expresar su estilo y su pasión por la decoración, el local se encuentra en el corazón del puerto de frutos donde se diseñan, restauran y crean muebles y objetos de decoración para el hogar.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12">
                     <h2 class="aboutUs__title text-center mt-4">
+                        <!-- TITLE -->
                         APARICIONES EN REVISTAS
                     </h2>
                     <!-- CARAS -->
@@ -74,23 +81,25 @@
     <!-- FOOTER DESKTOP START -->
     <footer class="footer container-fluid mt-4 d-none d-sm-block">
         <div class="row d-flex">
-        <div class="footer__brand col-6 col-sm-2 align-self-center">
+            <div class="footer__brand col-6 col-sm-2 align-self-center">
+            <!-- NAV BRAND -->
             <a href="../index.html">
                 <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
             </a>
         </div>
+        <!-- FOOTER INFORMATION -->
         <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start">
             <p>Sarmiento 37</p>
             <p>Puerto de Frutos, Tigre</p>
             <p>+52 9 11 2780-2449</p>
             <p>Ventasweb@latiendadelola.com</p>
         </div>
-
+        <!-- FOOTER MAP -->
         <div class="footer__map col-6 col-sm-4 align-self-center">
             <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
         </div>
-
+        <!-- FOOTER BUTTONS -->
         <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
             <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
             <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
@@ -108,10 +117,12 @@
         <div class="row">
         <div class="col-6 pt-2">
             <div class="footer__brand col-6 col-sm-2 align-self-center">
+                <!-- FOOTER BRAND -->
                 <a href="../index.html">
                     <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
                 </a>
             </div>
+            <!-- FOOTER BUTTONS -->
             <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
             <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
                 <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
@@ -120,6 +131,7 @@
                 <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
             </a>
             </div>
+            <!-- FOOTER INFORMATION -->
             <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
             <p>Sarmiento 37</p>
             <p>Puerto de Frutos, Tigre</p>
@@ -128,6 +140,7 @@
             </div>
         </div>
         <div class="col-6 pt-2">
+            <!-- FOOTER MAP -->
             <div class="footer__map col-6 col-sm-4 align-self-center">
             <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
