--- a/pages/servilletero.html
+++ b/pages/servilletero.html
@@ -104,10 +104,12 @@
     <div class="row">
       <div class="col-6 pt-2">
         <div class="footer__brand col-6 col-sm-2 align-self-center">
+          <!-- FOOTER BRAND -->
           <a href="../index.html">
             <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
           </a>
         </div>
+        <!-- FOOTER BUTTONS -->
         <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
           <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
             <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
@@ -116,6 +118,7 @@
             <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
           </a>
         </div>
+        <!-- FOOTER INFORMATION -->
         <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
           <p>Sarmiento 37</p>
           <p>Puerto de Frutos, Tigre</p>
@@ -124,6 +127,7 @@
         </div>
       </div>
       <div class="col-6 pt-2">
+        <!-- FOOTER MAP -->
         <div class="footer__map col-6 col-sm-4 align-self-center">
           <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
