--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,14 +13,17 @@
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
+            <!-- FOOTER BRAND -->
             <a class="navbar-brand" href="../index.html">
                 <img src="../images/laTiendaDeLolaLogo.png" class="navbar-brand__image" alt="Icono de La Tienda de Lola">
             </a>
+            <!-- COLLAPSED NAV BUTTON -->            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
+                    <!-- NAV LINKS -->
                     <li class="nav-item">
                         <a class="nav-link navbar-link__style" aria-current="page" href="../index.html">Inicio</a>
                     </li>
@@ -38,6 +41,7 @@
                     </li>
                 </ul>
             </div>
+            <!-- SEARCH BAR -->
             <div class="searchbar d-none d-lg-block me-3">
                 <input class="search_input" type="text" name="" placeholder="Buscar">
                 <a href="#" class="search_icon">
@@ -51,10 +55,11 @@
     <!-- CONTACT -->
     <div class="container">
         <div class="row pt-5">
-            <!-- TITLE / SUBTITLE -->
+            <!-- TITLE -->
             <div class="col-12 d-flex justify-content-center">
                 <h2 class="contact__title">CONTACTO</h2>
             </div>
+            <!-- SUBTITLE -->
             <div class="col-12 d-flex justify-content-center">
                 <p class="contact__subtitle">Rellená el formulario y nos
                     pondremos en contacto</p>
@@ -71,15 +76,17 @@
 
         </div>
     </div>
-
+    
     <!-- FOOTER DESKTOP START -->
     <footer class="footer container-fluid mt-4 d-none d-sm-block">
         <div class="row d-flex">
         <div class="footer__brand col-6 col-sm-2 align-self-center">
+            <!-- FOOTER BRAND -->
             <a href="../index.html">
                 <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
             </a>
         </div>
+        <!-- FOOTER INFORMATION -->
         <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start">
             <p>Sarmiento 37</p>
             <p>Puerto de Frutos, Tigre</p>
@@ -88,10 +95,11 @@
         </div>
 
         <div class="footer__map col-6 col-sm-4 align-self-center">
+            <!-- FOOTER MAP -->
             <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
         </div>
-
+        <!-- FOOTER BUTTONS -->
         <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
             <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
             <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
@@ -109,10 +117,12 @@
         <div class="row">
         <div class="col-6 pt-2">
             <div class="footer__brand col-6 col-sm-2 align-self-center">
+                <!-- FOOTER BRAND -->
                 <a href="../index.html">
                     <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
                 </a>
             </div>
+            <!-- FOOTER BUTTONS -->
             <div class="footer__buttons col-6 col-sm-1 d-flex flex-row justify-content-center align-self-center ps-3">
             <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
                 <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-75" alt="Icono de instagram">
@@ -121,6 +131,7 @@
                 <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-75" alt="Icono de Facebook">
             </a>
             </div>
+            <!-- FOOTER INFORMATION -->
             <div class="footer__information col-6 col-sm-5 align-self-center justify-content-start ps-3 pt-4">
             <p>Sarmiento 37</p>
             <p>Puerto de Frutos, Tigre</p>
@@ -130,8 +141,9 @@
         </div>
         <div class="col-6 pt-2">
             <div class="footer__map col-6 col-sm-4 align-self-center">
-            <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
+                <!-- FOOTER MAP -->
+                <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" style="border:0;" allowfullscreen="" loading="lazy" width="170px" height="220px"></iframe>
             </div>
         </div>
         </div>    
