--- a/pages/comoComprar.html
+++ b/pages/comoComprar.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR">
 <body>
     <!-- NAVBAR START -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
             <!-- LOGO -->
             <a class="navbar-brand" href="../index.html">
