--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- NAVBAR START -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
             <!-- FOOTER BRAND -->
             <a class="navbar-brand" href="../index.html">
