Arreglado de index.html y agregado de animaciones

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
       </div>
       <!-- SLIDER CONTROL -->
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Anterior</span>
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Siguiente</span>
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
       </button>
     </div>
   </div>
@@ -96,7 +96,7 @@
       <!-- SHIPPING -->
       <div class="buyingInformation__shipping buyingInformation__shipping--style col-sm-4 col-12 text-center mb-4">
         <img src="images/truckIcon.png" class="d-inline-block align-top img-fluid" alt="Icono de Camion de Envios">
-        <div class="buyingInformation__text d-inline-block w-50 ps-1">
+        <div class="buyingInformation__text d-inline-block w-75 ps-1">
           <h2 class="buyingInformation__title buyingInformation__title--style">ENVIAMOS TU COMPRA</h2>
           <small class="buyingInformation__subtitle buyingInformation__subtitle--style">Entregas a todo el país</small>
         </div>
@@ -104,7 +104,7 @@
       <!-- PAYMENT -->
       <div class="buyingInformation__payment buyingInformation__payment--style col-sm-4 col-12 text-center mb-4">
         <img src="images/cardIcon.png" class="d-inline-block align-top img-fluid" alt="Icono de Tarjeta de Credito">
-        <div class="buyingInformation__text d-inline-block w-50 ps-1">
+        <div class="buyingInformation__text d-inline-block w-75 ps-1">
           <h2 class="buyingInformation__title buyingInformation__title--style">PAGÁ COMO QUIERAS</h2>
           <small class="buyingInformation__subtitle buyingInformation__subtitle--style">Tarjetas de crédito o efectivo</small>
         </div>
@@ -112,7 +112,7 @@
       <!-- SAFETY -->
       <div class="buyingInformation__safety buyingInformation__safety--style col-sm-4 col-12 text-center mb-4">
         <img src="images/lockIcon.png" class="d-inline-block align-top img-fluid" alt="Icono de Cerradura">
-        <div class="buyingInformation__text d-inline-block w-50 ps-1">
+        <div class="buyingInformation__text d-inline-block w-75 ps-1">
           <h2 class="buyingInformation__title buyingInformation__title--style">COMPRÁ CON SEGURIDAD</h2>
           <small class="buyingInformation__subtitle buyingInformation__subtitle--style">Tus datos siempre protegidos</small>
         </div>
@@ -132,49 +132,49 @@
         <p class="featuredProducts__subtitle featuredProducts__subtitle--style text-center">Todo lo que soñás para tu casa</p>
       </div>
       <!-- PRODUCTS -->
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productOne" href="pages/servilletero.html">
           <img src="images/servilletero.JPG" class="w-75 rounded" alt="Imagen del Servilletero">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Servilletero - $500</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productTwo" href="pages/kitDeCubiertosyPlatos.html">
           <img src="images/platos_y_utensillos.JPG" class="w-75 rounded" alt="Imagen Kit de Cubiertos y Platos Lola">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Kit de Cubiertos y Platos - $10000</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productThree" href="pages/mate.html">
           <img src="images/mate.JPG" class="w-75 rounded" alt="Imagen Mate">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Mate - $800</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productFour" href="pages/doorStoper.html">
           <img src="images/para_puerta.JPG" class="w-75 rounded" alt="Imagen DoorStoper">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Door Stoper - $600</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productFive" href="pages/almohadonLuli.html">
           <img src="images/almohadon_blanco.JPG" class="w-75 rounded" alt="Imagen Almohado Luli">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Luli - $750</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productSix" href="pages/almohadonTuti.html">
           <img src="images/almohadon_crudo.JPG" class="w-75 rounded" alt="Imagen Almohadon Tuti">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Tuti - $1200</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productSeven" href="pages/almohadonParis.html">
           <img src="images/almohadon_rallado.JPG" class="w-75 rounded" alt="Imagen Almohadon Paris">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Almohadon Paris - $550</p>
         </a>
       </div>
-      <div class="featuredProducts__product col-6 col-sm-3 text-center">
+      <div class="featuredProducts__product col-6 col-sm-3 text-center grow">
         <a class="text-decoration-none featuredProducts__productEight" href="pages/hamaca.html">
           <img src="images/hamaca.JPG" class="w-75 rounded" alt="Imagen Hamaca">
           <p class="featuredProducts__productText featuredProducts__productText--style mt-2">Hamaca - $10000</p>
@@ -190,7 +190,7 @@
       <div class="col-12 col-sm-4">
         <!-- MUEBLES -->
         <a href="#">
-          <div class="card category__muebles category__muebles--style mt-4">
+          <div class="card category__muebles category__muebles--style mt-4 grow">
             <img src="images/categorias_muebles.JPG" alt="Imagen de la categoría Muebles" class="category__image rounded">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h5 class="card-title cardTitle__muebles fs-1">MUEBLES</h5>
@@ -201,7 +201,7 @@
       <div class="col-12 col-sm-4">
         <!-- TEXTILES -->
         <a href="#">
-          <div class="card category__textiles category__textiles--style mt-4">
+          <div class="card category__textiles category__textiles--style mt-4 grow">
             <img src="images/categorias_textiles.JPG" alt="Imagen de la categoría Textiles" class="category__image rounded">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h5 class="card-title cardTitle__textiles fs-1">TEXTILES</h5>
@@ -212,7 +212,7 @@
       <div class="col-12 col-sm-4">
         <!-- DECORACIÓN -->
         <a href="#">
-          <div class="card category__decoracion category__decoracion--style mt-4">
+          <div class="card category__decoracion category__decoracion--style mt-4 grow">
             <img src="images/categorias_decoracion.JPG" alt="Imagen de la categoría Decoracíon" class="category__image rounded">
             <div class="card-img-overlay d-flex align-items-center justify-content-center">
               <h5 class="card-title cardTitle__decoracion fs-1">DECORACIÓN</h5>
