Agregado de animaciones a elementos del index (productos destacados, categorias, logo footer, botones footer

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
   <footer class="footer container-fluid mt-4 d-none d-sm-block">
     <div class="row d-flex">
       <!-- FOOTER BRAND -->
-      <div class="footer__brand col-6 col-sm-2 align-self-center">
+      <div class="footer__brand col-6 col-sm-2 align-self-center grow">
         <a href="index.html">
-          <img src="images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+          <img src="images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-4" alt="Logo de La Tienda de Lola">
         </a>
       </div>
       <!-- FOOTER INFORMATION -->
@@ -244,15 +244,15 @@
       <!-- FOOTER MAP -->
       <div class="footer__map col-6 col-sm-4 align-self-center">
         <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
       </div>
 
       <!-- SOCIAL MEDIA BUTTONS -->
       <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
-        <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
+        <a href="https://www.instagram.com/la.tiendadelola/" target="_blank" class="grow">
           <img src="images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
         </a>
-        <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
+        <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank" class="grow">
           <img src="images/facebookIcon.png" class="footer-buttons__facebook w-100" alt="Icono de Facebook">
         </a>
       </div>
