Arreglado de la tabulacion de la pagina tiendaOnline.html

--- a/pages/tiendaOnline.html
+++ b/pages/tiendaOnline.html
@@ -10,129 +10,129 @@
     <meta name="keywords" content="LA TIENDA DE LOLA, TIENDA LOLA, LOLA TIENDA, MUEBLES, DECORACION, DECORACIÓN, HOGAR, DISEÑO, SERVILLETEROS, PORTA VELAS, MATES, ALMOHADONES, BACHAS DE CERAMICA, MESA DE COMEDOR, JUEGOS DE CAMASTROS, INTERIOR, EXTERIOR">
 </head>
 <body>
-    <!-- NAVBAR START -->
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <div class="container-fluid">
-          <!-- LOGO -->
-            <a class="navbar-brand" href="../index.html">
-                <img src="../images/laTiendaDeLolaLogo.png" class="navbar-brand__image" alt="Icono de La Tienda de Lola">
-            </a>
-            <!-- COLLAPSED NAV BUTTON -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-              <!-- NAV LINKS -->
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="tiendaOnline.html">Tienda Online</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="comoComprar.html">Como Comprar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link navbar-link__style" href="sobreNosotros.html">Sobre Nosotros</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- SEARCH BAR -->
-            <div class="searchbar d-none d-lg-block me-3">
-                <input class="search_input" type="text" name="" placeholder="Buscar">
-                <a href="#" class="search_icon">
-                    <img src="../images/search.svg" alt="Search Icon">
-                </a>
-            </div>
-        </div>
-    </nav>
-    <!-- NAVBAR ENDS -->
-
-    <!-- ONLINE SHOP -->
-    <div class="container-fluid onlineShop">
-        <div class="row">
-            <div class="col-12">
-                <!-- ONLINE SHOP HEADER -->
-                <h1 class="onlineShop__title text-center pt-4">TIENDA ONLINE</h1>
-            </div>
-        </div>
-        <div class="row pt-4">
-            <div class="col-6 col-sm-3 text-center pt-2 pb-4 onlineShop__productOne">
-                <!-- PRODUCT ONE -->
-                <a href="servilletero.html" class="text-decoration-none">
-                    <img src="../images/servilletero.JPG" class="w-75" alt="Imagen de Servilletero">
-                    <h2 class="pt-2 onlineShop__productTitle">SERVILLETERO - $500</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productTwo">
-                <!-- PRODUCT TWO -->
-                <a href="kitDeCubiertosyPlatos.html" class="text-decoration-none">
-                    <img src="../images/platos_y_utensillos.JPG" class="w-75" alt="Imagen de Kit de Cubiertos y Platos">
-                    <h2 class="pt-2 onlineShop__productTitle">KIT DE CUBIERTOS Y PLATOS - $10000</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productThree">
-                <!-- PRODUCT THREE -->
-                <a href="mate.html" class="text-decoration-none">
-                    <img src="../images/mate.JPG" class="w-75" alt="Imagen de Mate">
-                    <h2 class="pt-2 onlineShop__productTitle">MATE - $800</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productFour">
-                <!-- PRODUCT FOUR -->
-                <a href="doorStoper.html" class="text-decoration-none">
-                    <img src="../images/para_puerta.JPG" class="w-75" alt="Imagen Door Stoper">
-                    <h2 class="pt-2 onlineShop__productTitle">DOOR STOPER - $600</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productFive">
-                <!-- PRODUCT FIVE -->
-                <a href="almohadonLuli.html" class="text-decoration-none">
-                    <img src="../images/almohadon_blanco.JPG" class="w-75" alt="Imagen Almohadon Luli">
-                    <h2 class="pt-2 onlineShop__productTitle">ALMOHADON LULI - $750</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productSix">
-                <!-- PRODUCT SIX -->
-                <a href="almohadonTuti.html" class="text-decoration-none">
-                    <img src="../images/almohadon_crudo.JPG" class="w-75" alt="Imagen Almohadon Tuti">
-                    <h2 class="pt-2 onlineShop__productTitle">ALMOHADON TUTI - $1200</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productSeven">
-                <!-- PRODUCT SEVEN -->
-                <a href="almohadonParis.html" class="text-decoration-none">
-                    <img src="../images/almohadon_rallado.JPG" class="w-75" alt="Imagen Almohadon Paris">
-                    <h2 class="pt-2 onlineShop__productTitle">ALMOHADON PARIS - $550</h2>
-                </a>
-            </div>
-            <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productEight">
-                <!-- PRODUCT EIGHT -->
-                <a href="hamaca.html" class="text-decoration-none">
-                    <img src="../images/hamaca.JPG" class="w-75" alt="Imagen Hamaca">
-                    <h2 class="pt-2 onlineShop__productTitle">HAMACA - $10000</h2>
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <!-- ONLINE SHOP PAGE SELECTOR -->
-                <ul class="d-flex list-unstyled justify-content-center pt-4 pb-2 onlineShop__pageSelector">
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">&#8592</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">1</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">2</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">3</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">4</a></li>
-                    <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">&#8594</a></li>
-                </ul>
-            </div>
-        </div>
+  <!-- NAVBAR START -->
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container-fluid">
+      <!-- LOGO -->
+      <a class="navbar-brand" href="../index.html">
+        <img src="../images/laTiendaDeLolaLogo.png" class="navbar-brand__image" alt="Icono de La Tienda de Lola">
+      </a>
+      <!-- COLLAPSED NAV BUTTON -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+        <!-- NAV LINKS -->
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link navbar-link__style" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar-link__style" href="tiendaOnline.html">Tienda Online</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar-link__style" href="comoComprar.html">Como Comprar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar-link__style" href="contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link navbar-link__style" href="sobreNosotros.html">Sobre Nosotros</a>
+          </li>
+        </ul>
+      </div>
+      <!-- SEARCH BAR -->
+      <div class="searchbar d-none d-lg-block me-3">
+        <input class="search_input" type="text" name="" placeholder="Buscar">
+        <a href="#" class="search_icon">
+          <img src="../images/search.svg" alt="Search Icon">
+        </a>
+      </div>
     </div>
-    <!-- ONLINE SHOP END -->
+  </nav>
+  <!-- NAVBAR ENDS -->
+
+  <!-- ONLINE SHOP -->
+  <div class="container-fluid onlineShop">
+    <div class="row">
+      <div class="col-12">
+        <!-- ONLINE SHOP HEADER -->
+        <h1 class="onlineShop__title text-center pt-4">TIENDA ONLINE</h1>
+      </div>
+  </div>
+  <!-- PRODUCTS -->
+  <div class="row pt-4">
+    <!-- PRODUCT ONE -->
+    <div class="col-6 col-sm-3 text-center pt-2 pb-4 onlineShop__productOne grow">
+      <a href="servilletero.html" class="text-decoration-none">
+        <img src="../images/servilletero.JPG" class="w-75" alt="Imagen de Servilletero">
+        <h2 class="pt-2 onlineShop__productTitle">SERVILLETERO - $500</h2>
+      </a>
+  </div>
+  <!-- PRODUCT TWO -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productTwo grow">
+    <a href="kitDeCubiertosyPlatos.html" class="text-decoration-none">
+      <img src="../images/platos_y_utensillos.JPG" class="w-75" alt="Imagen de Kit de Cubiertos y Platos">
+      <h2 class="pt-2 onlineShop__productTitle">KIT DE CUBIERTOS Y PLATOS - $10000</h2>
+    </a>
+  </div>
+  <!-- PRODUCT THREE -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productThree grow">
+    <a href="mate.html" class="text-decoration-none">
+      <img src="../images/mate.JPG" class="w-75" alt="Imagen de Mate">
+      <h2 class="pt-2 onlineShop__productTitle">MATE - $800</h2>
+    </a>
+  </div>
+  <!-- PRODUCT FOUR -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productFour grow">
+    <a href="doorStoper.html" class="text-decoration-none">
+      <img src="../images/para_puerta.JPG" class="w-75" alt="Imagen Door Stoper">
+      <h2 class="pt-2 onlineShop__productTitle">DOOR STOPER - $600</h2>
+    </a>
+  </div>
+  <!-- PRODUCT FIVE -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productFive grow">
+    <a href="almohadonLuli.html" class="text-decoration-none">
+      <img src="../images/almohadon_blanco.JPG" class="w-75" alt="Imagen Almohadon Luli">
+      <h2 class="pt-2 onlineShop__productTitle">ALMOHADON LULI - $750</h2>
+    </a>
+  </div>
+  <!-- PRODUCT SIX -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productSix grow">
+    <a href="almohadonTuti.html" class="text-decoration-none">
+      <img src="../images/almohadon_crudo.JPG" class="w-75" alt="Imagen Almohadon Tuti">
+      <h2 class="pt-2 onlineShop__productTitle">ALMOHADON TUTI - $1200</h2>
+    </a>
+  </div>
+  <!-- PRODUCT SEVEN -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productSeven grow">
+    <a href="almohadonParis.html" class="text-decoration-none">
+      <img src="../images/almohadon_rallado.JPG" class="w-75" alt="Imagen Almohadon Paris">
+      <h2 class="pt-2 onlineShop__productTitle">ALMOHADON PARIS - $550</h2>
+    </a>
+  </div>
+  <!-- PRODUCT EIGHT -->
+  <div class="col-6 col-sm-3 text-center pt-2 onlineShop__productEight grow">
+    <a href="hamaca.html" class="text-decoration-none">
+      <img src="../images/hamaca.JPG" class="w-75" alt="Imagen Hamaca">
+      <h2 class="pt-2 onlineShop__productTitle">HAMACA - $10000</h2>
+    </a>
+  </div>
+
+  <!-- ONLINE SHOP PAGE SELECTOR -->
+  <div class="row">
+    <div class="col-12">
+      <ul class="d-flex list-unstyled justify-content-center pt-4 pb-2 onlineShop__pageSelector">
+        <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">&#8592</a></li>
+        <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">1</a></li>
+        <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">2</a></li>
+        <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">3</a></li>
+        <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">4</a></li>
+        <li><a class="text-decoration-none p-1 onlineShop__pageSelectorItem" href="#">&#8594</a></li>
+      </ul>
+    </div>
+  </div>
+  <!-- ONLINE SHOP END -->
 
   <!-- FOOTER DESKTOP START -->
   <footer class="footer container-fluid mt-4 d-none d-sm-block">
@@ -140,7 +140,7 @@
       <!-- FOOTER BRAND -->
       <div class="footer__brand col-6 col-sm-2 align-self-center">
         <a href="../index.html">
-          <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-2" alt="Logo de La Tienda de Lola">
+          <img src="../images/laTiendaDeLolaLogo.png" class=" footer-brand__image img-fluid p-4 grow" alt="Logo de La Tienda de Lola">
         </a>
       </div>
       <!-- FOOTER INFORMATION -->
@@ -153,14 +153,14 @@
       <!-- FOOTER MAP -->
       <div class="footer__map col-6 col-sm-4 align-self-center">
         <h2 class="footer-map__header pt-2">¡Encontranos!</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322" height="200" style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13165.257637607938!2d-58.572717!3d-34.418768!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2ad1e9c892cd5cf8!2sLa%20Tienda%20de%20Lola!5e0!3m2!1sen!2sar!4v1625248920025!5m2!1sen!2sar" width="322"  style="border:0;" allowfullscreen="" loading="lazy" class="w-100"></iframe>
       </div>
       <!-- FOOTER BUTTONS -->
       <div class="footer__buttons col-6 col-sm-1 d-flex flex-column justify-content-center align-self-center">
-        <a href="https://www.instagram.com/la.tiendadelola/" target="_blank">
+        <a href="https://www.instagram.com/la.tiendadelola/" target="_blank" class="grow">
           <img src="../images/instagramIcon.png" class="footer-buttons__instagram w-100" alt="Icono de instagram">
         </a>
-        <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank">
+        <a href="https://www.facebook.com/latiendadelolatigre/" target="_blank" class="grow">
           <img src="../images/facebookIcon.png" class="footer-buttons__facebook w-100" alt="Icono de Facebook">
         </a>
       </div>
